# ars_project

./: .gitignore  CLAUDE.md  NEXT_SESSION.md  README.md
arduino/: WIRING.md
arduino/encoder_test/: encoder_test.ino
arduino/main_robot/: main_robot.ino
arduino/motor_control/: motor_control.ino
ros2_workspace/config/: slam_toolbox_lidar_only.yaml
ros2_workspace/rviz/: combined_view.rviz  realsense_view.rviz  slam_test.rviz
ros2_workspace/src/ars_description/: package.xml  setup.cfg  setup.py
ros2_workspace/src/ars_description/ars_description/: encoder_joint_state_node.py  teleop_bridge_node.py
ros2_workspace/src/ars_description/launch/: camera_lidar_view_launch.py  display_launch.py  robot_and_lidar_launch.py  robot_and_slam_launch.py  robot_camera_lidar_view_launch.py  robot_slam_camera_launch.py  robot_slam_camera_teleop_launch.py
ros2_workspace/src/ars_description/rviz/: camera_lidar_view.rviz  robot_and_lidar_view.rviz  robot_and_slam_view.rviz  robot_camera_lidar_view.rviz  robot_slam_camera_view.rviz  robot_view.rviz
ros2_workspace/src/ars_description/udev/: 99-ars-arduino.rules
ros2_workspace/src/ars_description/urdf/: ars_robot.urdf.xacro
ros2_workspace/src/cartographer_slam/: package.xml  setup.py
ros2_workspace/src/cartographer_slam/config/: cartographer_lidar_only.lua  cartographer_sim_odom.lua
ros2_workspace/src/cartographer_slam/launch/: cartographer_lidar_only_launch.py
ros2_workspace/src/lidar_odometry/: package.xml  setup.py
ros2_workspace/src/lidar_odometry/launch/: icp_odometry_launch.py
ros2_workspace/src/lidar_odometry/rviz/: icp_odom.rviz
ros2_workspace/src/mecanum_sim/: README.md  package.xml  setup.cfg  setup.py
ros2_workspace/src/mecanum_sim/config/: mecanum_drive_controller.yaml
ros2_workspace/src/mecanum_sim/launch/: mecanum_sim_launch.py
ros2_workspace/src/mecanum_sim/urdf/: mecanum_robot.urdf.xacro
ros2_workspace/src/mecanum_sim/worlds/: mecanum_test_room.sdf
ros2_workspace/src/obstacle_avoidance/: package.xml  setup.py
ros2_workspace/src/obstacle_avoidance/launch/: obstacle_avoidance_launch.py  obstacle_avoidance_with_camera_launch.py
ros2_workspace/src/obstacle_avoidance/obstacle_avoidance/: obstacle_detector_node.py
ros2_workspace/src/wheel_odometry/: package.xml  setup.py
ros2_workspace/src/wheel_odometry/wheel_odometry/: wheel_odometry_node.py
ros2_workspace/src/ydlidar_ros2_driver/params/: X2.yaml  ydlidar.yaml
