<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mecanum_sim</name>
  <version>0.1.0</version>
  <description>
    Layer 3 stretch: simplified mecanum-wheel robot (real wheelbase/track/
    wheel-radius, placeholder chassis box -- see mecanum_robot.urdf.xacro)
    simulated in Gazebo Sim, to test the cartographer_slam LIDAR-only SLAM
    pipeline against a repeatable environment, decoupled from the real
    hardware's USB/power issues (see CLAUDE.md's RealSense findings).
  </description>
  <maintainer email="mohdtsaqif@gmail.com">Tsaqif</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
