<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>
    Layer 2 stretch goal: reads LIDAR scan data (published on /scan by
    whichever driver is running -- see ydlidar_ros2_driver in this
    workspace), detects obstacles within a configurable stop threshold in
    the robot's forward path, and sends a stop/go serial command to the
    Arduino Mega running main_robot.ino.
    See CLAUDE.md and the project plan for the full priority-layer context.
  </description>
  <maintainer email="fakhrulhafiz99@gmail.com">fakhrullhafiz</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
